Enable communication with Kafka broker using TLS
Signed-off-by: Brynnon Picard <brynnonpicard@gmail.com>

--- a/yaml/kubernetes/connector-dep.yml
+++ b/yaml/kubernetes/connector-dep.yml
@@ -38,7 +38,14 @@ spec:
             - name: auth
               readOnly: true
               mountPath: "/var/secrets/"
+            - name: tls-config
+              readOnly: true
+              mountPath: "/var/tls-secrets/"
       volumes:
       - name: auth
         secret:
           secretName: basic-auth
+      - name: tls-config
+        secret:
+          secretName: tls-config
+          optional: true
